productos/portal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: productos-front-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: productos-front-service
          servicePort: 8109
        path: /productos    #/myportal(/|$)(.*)             #/?(.*)
